
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(pyeye.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(pyeye.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(pyeye python pyeye.i) 
SWIG_LINK_LIBRARIES(pyeye ${PYTHON_LIBRARIES} eyelog)

